[package]
name = "gnosis-era"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
gnosis-primitives = { git = "https://github.com/gnosischain/gnosis-stuff.git", version = "0.0.2" }
reth-era = { git = "https://github.com/paradigmxyz/reth", rev = "9d1af5a" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9d1af5a" }
alloy-consensus = { version = "1.0.22", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-rlp = "0.3.10"
hex = "0.4.3"
